<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_cdsdata_test"
        android:title="@string/action_cdsdata_test"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_exampleogg_test"
        android:title="@string/action_exampleogg_test"
        android:orderInCategory="100"
        android:showAsAction="never"/>

    <!--<item-->
    <!--android:id="@+id/action_clear_messages"-->
    <!--android:title="@string/action_clear_messages"-->
    <!--android:orderInCategory="110"-->
    <!--app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_copy_clipboard"
        android:title="@string/action_copy_clipboard"
        android:orderInCategory="110"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_detailed_info"
        android:title="@string/action_detailed_info"
        android:orderInCategory="110"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_app_exit"
        android:title="@string/action_app_exit"
        android:orderInCategory="130"
        android:showAsAction="never"/>

</menu>
